Fixed login alignment, splash screen button, spinner

--- a/client/src/app/components/spinner/spinner.component.css
+++ b/client/src/app/components/spinner/spinner.component.css
@@ -22,7 +22,7 @@
 }
 
 .loadingContainer {
-  position: absolute;
+  position: fixed;
   display: flex;
   flex-direction: column;
   gap: 10px;
