--- a/client/src/app/components/splashscreen/splashscreen.component.css
+++ b/client/src/app/components/splashscreen/splashscreen.component.css
@@ -35,7 +35,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  cursor: pointer;
   width: 40%;
   border-radius: 10px;
   padding: 10px 0;
